--- a/views/add-lead.html
+++ b/views/add-lead.html
@@ -359,23 +359,13 @@
 															<div class="input-block mb-3">
 															  <label>City</label>
 															  <select class="form-select" id="displayCity">
-																<option>Select City</option>
-																<option>Mumbai</option>
-																<option>Thane</option>
-																<option>Navi Mumbai</option>
-																<option>Panvel</option>
 															  </select>
 															</div>
 														</div>
 														<div class="col-lg-4 col-md-6 col-sm-12">
 															<div class="input-block mb-3">
 															  <label>State</label>
-															  <select class="form-select">
-																<option>Select State</option>
-																<option>Maharashtra</option>
-																<option>Goa</option>
-																<option>Gujrat</option>
-																<option>Karnataka</option>
+															  <select class="form-select" id="displayState">
 															  </select>
 															</div>
 														</div>
@@ -383,9 +373,7 @@
 														<div class="col-lg-4 col-md-6 col-sm-12">
 															<div class="input-block mb-3">
 															  <label>Country</label>
-															  <select class="form-select">
-																<option>Select Country</option>
-																<option>India</option>
+															  <select class="form-select" id="displayCountry">
 															  </select>
 															</div>
 														</div>
@@ -554,5 +542,7 @@
 		<!-- Custom JS -->
 		<script src="assets/js/script.js"></script>
 		<script src="../countryCityState/selectCity.js"></script>
+		<script src="../countryCityState/selectCountry.js"></script>
+		<script src="../countryCityState/selectState.js"></script>
 </body>
 </html>
